--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,3 +10,35 @@
 		font-size: 24px;
 	}
 }
+.top-area, .special-area{
+	clear: both;
+}
+.logo img{
+	width: 150px;
+}
+.search-tabs-abs{
+	left: auto;
+	width: auto;	
+}
+footer#main-footer {
+	background: #dedede;
+	color: #000000;
+	font-size: 14px;
+}
+.footer-logo{
+	img{
+		width: 150px;
+		margin-bottom: 20px;
+	}
+}
+footer ul.list-footer a{
+	color: #000 !important;
+}
+.container{
+	max-width: 1440px;
+	width: 100%;	
+}
+.top-user-area .top-user-area-list > li > a{
+	color: #000;
+	font-size: 15px;
+}
