--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,14 @@
 !!!
 %html{:lang => "en"}
 	%head
+		%script{:async => "", :src => "https://www.googletagmanager.com/gtag/js?id=UA-127040298-1"}
+		:javascript
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-127040298-1');
+
 		%title= content_for?(:title) ? yield(:title) : "Tripscrave"
 		%meta{:content => "text/html;charset=utf-8", "http-equiv" => "Content-Type"}/
 		%meta{:content => "Tripscrave - Premium template for travel companies", :name => "description"}/
